--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
 
       </div>
-    
+   
     </section><!-- End About Section -->
 
     <!-- ======= Counts Section ======= -->
@@ -306,7 +306,9 @@
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
+  <script src="/assets/js/bootstrap.min.js"></script>
   <script src="/assets/js/jquery.min.js"></script>
   <script src="/assets/js/owl.carousel.min.js"></script>
   <script src="/assets/js/popper.js"></script>
