--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<h2 class="heading-section mb-5 pb-md-4">Our Principals</h2>
+						<h2 class="heading-section mb-5 pb-md-4">Our Principles</h2>
 					</div>
 					<div class="col-md-12">
 						<div class="slider-hero">
