--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -25,7 +25,6 @@
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
@@ -267,7 +266,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Ground Bar & Lounge</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Accomodation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Car Wash</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Car Hire</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services.html#cars">Car Hire</a></li>
             </ul>
           </div>
 
@@ -360,8 +359,7 @@ owl.on('changed.owl.carousel', function(event) {
 
 })(jQuery);
   </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
-<script src='https://widgets.sociablekit.com/google-reviews/widget.js' async defer></script>
+
 </body>
 
 </html>
