--- a/about.html
+++ b/about.html
@@ -270,7 +270,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Ground Bar & Lounge</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Accomodation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Car Wash</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Car Hire</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services.html#cars">Car Hire</a></li>
             </ul>
           </div>
 
