--- a/contact.html
+++ b/contact.html
@@ -194,7 +194,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Ground Bar & Lounge</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Accomodation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Car Wash</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Car Hire</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services.html#cars">Car Hire</a></li>
             </ul>
           </div>
 
@@ -239,5 +239,11 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+<script>
+  function scrollToElement(selector) {
+    var el = document.querySelector(selector);    
+    el.scrollIntoView({'behavior': 'smooth', 'block': 'start'});
+}
+</script>
 
 </html>
