--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Ground Bar & Lounge</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Accomodation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Car Wash</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services.html#cars">Car Hire</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services.html#cars" style="scroll-behavior: smooth;">Car Hire</a></li>
             </ul>
           </div>
 
@@ -301,11 +301,9 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
   <script src="/assets/js/bootstrap.min.js"></script>
   <script src="/assets/js/jquery.min.js"></script>
@@ -358,6 +356,8 @@ owl.on('changed.owl.carousel', function(event) {
 })
 
 })(jQuery);
+
+
   </script>
 
 </body>
