--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
 </style>
 
 
-<body>
+<body style="scroll-behavior: smooth;">
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
@@ -156,7 +156,7 @@
 
   </main>
 
-  <section id="cars">
+  <section id="cars" style="scroll-behavior: smooth;">
   <div class="row" style="text-align: center;">
     <div class="col-md-2"></div>
    
@@ -338,7 +338,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Ground Bar & Lounge</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Accomodation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Car Wash</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Car Hire</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services.html#cars">Car Hire</a></li>
             </ul>
           </div>
 
@@ -376,10 +376,8 @@
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
-
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script>
