--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
   <script src="/assets/js/jquery.min.js"></script>
   <script src="/assets/js/owl.carousel.min.js"></script>
   <script src="/assets/js/popper.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
