add more images

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 							<div class="featured-carousel owl-carousel">
 								<div class="item">
 									<div class="work">
-										<div class="img d-flex align-items-center justify-content-center" style="background-image: url(/assets/img/padA.jpg);">
+										<div class="img d-flex align-items-center justify-content-center" style="background-image: url(/assets/img/padA.avif);">
 											<div class="text text-center">
 												<h2>Affordable Prices</h2>
 											</div>
@@ -192,7 +192,7 @@
 
 							<div class="my-5 text-center">
 			          <ul class="thumbnail">
-			            <li class="active img"><a href="#"><img src="/assets/img/padA.jpg" alt="Image" class="img-fluid" style="height: 60px;width: 65px;"></a></li>
+			            <li class="active img"><a href="#"><img src="/assets/img/padA.avif" alt="Image" class="img-fluid" style="height: 60px;width: 65px;"></a></li>
 			            <li><a href="#"><img src="/assets/img/wash.png" alt="Image" class="img-fluid" style="height: 60px;width: 65px;"></a></li>
 			            <li><a href="#"><img src="/assets/img/bed.jpg" alt="Image" class="img-fluid" style="height: 60px;width: 65px;"></a></li>
 			          </ul>
