--- a/services.html
+++ b/services.html
@@ -109,7 +109,7 @@
 
           <div class="col-lg-4 col-md-6  d-flex align-items-stretch mt-4 mt-md-0">
             <div class="course-item">
-              <img src="assets/img/5.jpg" class="img-fluid" alt="...">
+              <img src="assets/img/5.avif" class="img-fluid" alt="...">
               <div class="course-content">
              
 
@@ -122,7 +122,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="course-item">
-              <img src="assets/img/rtop.png" class="img-fluid" alt="...">
+              <img src="assets/img/rtop.avif" class="img-fluid" alt="...">
               <div class="course-content">
                
 
